# Proyecto-1---MPointers

Proyecto #1 MPointers/: CMakeLists.txt  main.cpp
Proyecto #1 MPointers/DynMemoryPackage/: HasMemory.cpp  HasMemory.h  mainDynMemory.cpp
Proyecto #1 MPointers/DynMemoryPackage/ListaEnlazada/: listaEnlazada.cpp  listaEnlazada.h  nodo.h
Proyecto #1 MPointers/DynMemoryPackage/MemoryAlloc/: memoryMap.cpp  memoryMap.h  nodoMemory.h
Proyecto #1 MPointers/DynMemoryPackage/MemoryServer/: MemoryManage.cpp  MemoryManage.h
Proyecto #1 MPointers/MPointerPackage/: mainMPointer.cpp
Proyecto #1 MPointers/ServerPackage/: mainServer.cpp
